<resources>
    <string name="app_name">VinilosMobile</string>
    <!-- string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string -->>
    <string name="nav_header_title">Vinilos</string>
    <string name="nav_header_subtitle">Vinilos Mobile</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_albums">Albumes</string>
    <string name="menu_collectors">Coleccionistas</string>
    <string name="menu_musicians">Músicos</string>
    <string name="menu_album_detail">Detalles del album</string>
    <string name="menu_musician_detail">Detalles del músico</string>
    <string name="menu_collector_detail">Detalles del coleccionista</string>
    <string name="menu_album_create">Crear album</string>

    <!-- Strings used for fragments for navigation -->
    <!-- string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string-->

    <!--string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string-->
    <string name="collector_name_placeholder">Nombre del coleccionista</string>
    <string name="collector_email_placeholder">Correo del coleccionista</string>
    <string name="collector_phone_placeholder">Número telefónico</string>
    <!--string name="comment_rating_placeholder">##</string-->
    <string name="comment_description_placeholder">Descripción del comentario</string>
    <string name="album_name_placeholder">Nombre del álbum</string>
    <string name="album_description_placeholder">Descripción del álbum</string>
    <string name="txt_no_comments">No hay comentarios para este álbum</string>
    <string name="title_albums">Álbums</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_comments">Comentarios del álbum</string>
    <string name="title_musicians">Músicos</string>
    <string name="avatar_musician">Avatar</string>

    <string name="genero">Genero : </string>
    <string name="releaseDate">Fecha lanzamiento : </string>
    <string name="recordLabel">Compañia discografica : </string>
    <string name="birthDate">Fecha nacimiento : </string>
    <!-- Strings related to login -->
    <string name="prompt_name_album">Nombre</string>
    <string name="prompt_cover_album">Caratula</string>
    <string name="promp_description_album">Descripción</string>
    <string name="prompt_fecha_album">Fecha de lanzamiento</string>
    <string name="promp_genre_album">Genero</string>
    <string name="promp_record_label_album">Casa disquera</string>
    <string name="action_save_album">Guardar</string>
    <string name="welcome">"Welcome!"</string>
    <string name="action_create_album_short">Crear album</string>
    <string-array name="genre_array">

        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>


</resources>