<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.vinilosmobile.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_albums"
        android:name="com.example.vinilosmobile.ui.album.AlbumFragment"
        android:label="@string/menu_albums"
        tools:layout="@layout/fragment_album" >
        <action
            android:id="@+id/action_nav_albums_to_nav_detail_album"
            app:destination="@id/nav_detail_album" />
    </fragment>

    <fragment
        android:id="@+id/nav_musicians"
        android:name="com.example.vinilosmobile.ui.musician.MusicianFragment"
        android:label="@string/menu_musicians"
        tools:layout="@layout/fragment_musician" >
        <action
            android:id="@+id/action_nav_musicians_to_nav_detail_musician"
            app:destination="@id/nav_detail_musician" />
    </fragment>

    <fragment
        android:id="@+id/nav_collectors"
        android:name="com.example.vinilosmobile.ui.collector.CollectorFragment"
        android:label="@string/menu_collectors"
        tools:layout="@layout/fragment_collector" >
        <action
            android:id="@+id/action_nav_collectors_to_nav_detail_collector"
            app:destination="@id/nav_detail_collector" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail_album"
        android:name="com.example.vinilosmobile.ui.album.AlbumDetailFragment"
        android:label="@string/menu_album_detail"
        tools:layout="@layout/album_detail_fragment"
        >
        <argument
            android:name="albumId"
            app:argType="integer" />
        <action
            android:id="@+id/action_nav_detail_album_to_nav_create_track"
            app:destination="@id/nav_create_track" />
    </fragment>


    <fragment
        android:id="@+id/nav_detail_musician"
        android:name="com.example.vinilosmobile.ui.musician.MusicianDetailFragment"
        android:label="@string/menu_musician_detail"
        tools:layout="@layout/musician_detail_fragment"
        >
        <argument
            android:name="musicianId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail_collector"
        android:name="com.example.vinilosmobile.ui.collector.CollectorDetailFragment"
        android:label="@string/menu_collector_detail"
        tools:layout="@layout/collector_detail_fragment"
        >
        <argument
            android:name="collectorId"
            app:argType="integer" />
    </fragment>


    <fragment
        android:id="@+id/nav_create_track"
        android:name="com.example.vinilosmobile.ui.track.TrackCreateFragment"
        android:label="@string/btn_create_track"
        tools:layout="@layout/track_fragment"
        >
        <argument
            android:name="albumId"
            app:argType="integer" />
        <action
            android:id="@+id/action_nav_create_track_to_nav_album_detail"
            app:destination="@id/nav_detail_album" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_album"
        android:name="com.example.vinilosmobile.ui.album.AlbumCreateFragment"
        android:label="@string/menu_album_create"
        tools:layout="@layout/fragment_create_album"
        >
        <action
            android:id="@+id/action_nav_create_album_to_nav_albums"
            app:destination="@id/nav_albums" />
    </fragment>

</navigation>