<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.example.vinilosmobile.models.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.CreateCommentFragment">

            <TextView
                android:id="@+id/labelNameAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_name_album"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="49dp" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name_album"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:errorEnabled="true"/>

            <TextView
                android:id="@+id/labelDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promp_description_album"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promp_description_album"
                android:imeActionLabel="@string/action_create_album_short"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                app:errorEnabled="true"/>

            <TextView
                android:id="@+id/labelDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_fecha_album"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="135dp" />


            <EditText
                android:id="@+id/createDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_fecha_album"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                app:errorEnabled="true"/>


            <TextView
                android:id="@+id/genreLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promp_genre_album"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:id="@+id/genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promp_genre_album"
                android:imeActionLabel="@string/action_create_album_short"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                app:errorEnabled="true"/>

            <TextView
                android:id="@+id/coverLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_cover_album"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:id="@+id/cover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_cover_album"
                android:imeActionLabel="@string/action_create_album_short"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"/>

            <TextView
                android:id="@+id/recordLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promp_record_label_album"
                tools:layout_editor_absoluteX="24dp"
                tools:layout_editor_absoluteY="135dp" />

            <EditText
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promp_record_label_album"
                android:imeActionLabel="@string/action_create_album_short"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true"
                app:errorEnabled="true"/>

            <Button
                android:id="@+id/saveAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:enabled="true"
                android:gravity="end"
                android:text="@string/action_save_album" />


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>